[package]
name = "liquidity_locker"
version = "1.0.0"
authors = ["marinov"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cw-utils = "0.16.0"
cw2 = "0.16.0"
cw20 = "0.16.0"
cw721 = "0.11"
cw-controllers = "0.16.0"
cw20-base = { version = "0.16.0", features = ["library"] }
cosmwasm-std = { version = "1.1.5", features = ["staking"] }
cw-storage-plus = "0.16.0"
thiserror = "1.0.31"
cosmwasm-schema = "1.1.5"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
schemars = "0.8.3"
time = "0.3.29"
chrono = "0.4.31"

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.13.2"
